--- a/usr/MT/todo
+++ b/usr/MT/todo
@@ -1,6 +1,8 @@
 LOG in motion.cpp
 clearly introduce constraint maps as tasks -- feasibility, automatic penalty reduction
 
+** drive the robot:
+http://wiki.ros.org/pr2_controllers/Tutorials/Using%20the%20robot%20base%20controllers%20to%20drive%20the%20robot
 
 ** checkJointDimension is really const (HALT if state was not set)
 getJointDimension is not const
