--- a/usr/MT/todo
+++ b/usr/MT/todo
@@ -7,7 +7,9 @@ http://wiki.ros.org/pr2_controllers/Tutorials/Using%20the%20robot%20base%20contr
 ** checkJointDimension is really const (HALT if state was not set)
 getJointDimension is not const
 
-** lock in OpenGL
+** KVG
+
+dot interpretation (dot as 2st key -> color shape everything just copy!)
 
 ** Proper ConstrainedTaskMap:
 virtual function g
