calc_fwdPropagateFrames removed when redundant!

--- a/usr/MT/todo
+++ b/usr/MT/todo
@@ -1,3 +1,17 @@
+** ROS msgs
+
+python2 $ROSDIR/lib/gencpp/gen_cpp.py \
+        $MSGFILE \
+        -p $PKGNAME \
+        -e $ROSDIR/share/gencpp \
+        -I "std_msgs:$ROSDIR/share/std_msgs/msg" \
+        -I "geometry_msgs:$ROSDIR/share/geometry_msgs/msg" \
+        -o $OUTPUTDIR
+
+Johannes
+
+**
+
 LOG in motion.cpp
 clearly introduce constraint maps as tasks -- feasibility, automatic penalty reduction
 
