MLcourse code fixed

--- a/usr/MT/todo
+++ b/usr/MT/todo
@@ -1,3 +1,8 @@
+** task & constraints
+
+check the consistency of the constraintProcyVariable with squared
+penelty and old task variables
+
 ** traj optim
 
 - don't include task with zero prec in $f_t$ terms
