compile ros msg

--- a/usr/MT/todo
+++ b/usr/MT/todo
@@ -1,6 +1,6 @@
 ** task & constraints
 
-check the consistency of the constraintProcyVariable with squared
+check the consistency of the constraintProxyVariable with squared
 penelty and old task variables
 
 ** task map
