ors simplified: no ifrom ito ibody

--- a/usr/MT/todo
+++ b/usr/MT/todo
@@ -13,6 +13,12 @@ penelty and old task variables
 * action for pregrasp
 * task variable that allows a target RANGE
 
+** ORS:
+* in phi_t: have a list of k ors copies
+  * on entry, check which are equal to x_{t-k},..,x_t
+  * permute
+  * set the remaining
+
 ** traj optim
 
 - mix vel and acc penalties for optimization
